--- a/CompareTables/CompareTables.csproj
+++ b/CompareTables/CompareTables.csproj
@@ -4,6 +4,8 @@
     <OutputType>WinExe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <UseWPF>true</UseWPF>
+    <Authors>andrreshrr и NaxNax666</Authors>
+    <Description>Сравниваем таблицы</Description>
   </PropertyGroup>
 
   <ItemGroup>
